# deep-learning-track

./: README.md  pyproject.toml
src/deep_learning_track/: __init__.py  lab-1.ipynb  lab-2.ipynb
